config/default/proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
    app.kubernetes.io/name: spark-session-operator
    app.kubernetes.io/managed-by: kustomize
  name: proxy
  namespace: system
spec:
  ports:
  - name: gateway
    port: 8080
    protocol: TCP
    targetPort: gateway
  - name: thrift-proxy
    port: 10009
    protocol: TCP
    targetPort: thrift-proxy
  - name: connect-proxy
    port: 15002
    protocol: TCP
    targetPort: connect-proxy
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: spark-session-operator
