config/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: system
  labels:
    app.kubernetes.io/name: spark-session-operator
    app.kubernetes.io/managed-by: kustomize
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: spark-api.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy
            port:
              number: 8080
